# matrix-news-bot

./: Cargo.toml  README.md  config.toml.example
.github/workflows/: rust-arm64.yml
src/: bot_config.rs  event_handler.rs  main.rs  news_command.rs  news_thread.rs
