[package]
name = "news-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
matrix-sdk = "0.11"
anyhow = "1.0"
tokio =  { version =  "1.45", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3"
tagesschau-lib = { path = "/home/miggi/RustroverProjects/tagesschau-lib" }
chrono = "0.4"