[package]
name = "news-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
matrix-sdk = { version = "0.11", default-features = false, features = ["e2e-encryption", "native-tls"] }
tokio = { version = "1.45", features = ["rt-multi-thread"] }
tagesschau-lib = { git = "https://code.mymiggi.de/Miggi/tagesschau-lib.git" }
chrono = "0.4"
anyhow = "1.0"
#tracing-subscriber = "0.3"